packages/quickbooks-core/main/default/objects/Estimate__c/Estimate__c.object-meta.xml
<CustomObject>
    <label>Estimate</label>
    <pluralLabel>Estimates</pluralLabel>
    <nameField>
        <displayFormat>EST-{0000}</displayFormat>
        <label>Estimate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>