packages/quickbooks-core/main/default/objects/Estimate__c/fields/Estimate_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Date__c</fullName>
    <label>Estimate Date</label>
    <type>Date</type>
</CustomField>