packages/quickbooks-core/main/default/objects/Estimate__c/fields/QuickBooks_Estimate_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Estimate_Id__c</fullName>
    <externalId>true</externalId>
    <label>QuickBooks Estimate ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>