packages/quickbooks-core/main/default/objects/Estimate__c/fields/QuickBooks_Estimate_Number__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Estimate_Number__c</fullName>
    <label>QuickBooks Estimate Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>